--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "element-ui": "2.13.2",
     "js-base64": "^3.7.2",
     "js-cookie": "2.2.0",
+    "moment": "^2.29.4",
     "normalize.css": "7.0.0",
     "nprogress": "0.2.0",
     "path-to-regexp": "2.4.0",
